# word_bot

./: .env.example  .gitignore  CODE_STRUCTURE.md  README.md  ai-video-studio-design.md  pyproject.toml  test_run.py
config/: settings.py
config/templates/director/: default.txt
config/templates/reviewer/: default.txt
config/templates/screenwriter/: product.txt  science.txt  story.txt  trending.txt
src/: graph.py  main.py  state.py
src/agents/: base.py  director.py  editor.py  planner.py  reviewer.py  screenwriter.py
src/schemas/: cost.py  plan.py  project.py  review.py  script.py
src/services/: character_extractor.py  cost_tracker.py  image_gen.py  kling.py  llm.py  project_manager.py  tts.py  video_compose.py
src/utils/: media.py  sensitive_words.py
tests/: conftest.py  test_cost_tracker.py  test_director.py  test_editor.py  test_graph.py  test_kling.py  test_project.py  test_reviewer.py  test_schemas.py  test_screenwriter.py
