[project]
name = "ai-video-studio"
version = "0.1.0"
description = "Multi-agent video production system"
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.2.0",
    "openai>=1.50.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "moviepy>=2.0.0",
    "Pillow>=10.0",
    "numpy>=1.24.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "edge-tts>=6.1.0",
    "structlog>=24.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.5.0",
]

[project.scripts]
ai-video-studio = "src.main:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
